--- a/daovation-server/package.json
+++ b/daovation-server/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "daovation-server",
-  "packageManager": "yarn@3.2.3",
+  "name": "vc-verifier",
   "version": "1.0.0",
   "description": "Polygon ID Verifiable Credential (VC) verifier",
   "main": "index.js",
@@ -17,15 +16,5 @@
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.2"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "autoprefixer": "^10.4.12",
-    "eslint": "^8.15.0",
-    "eslint-config-next": "^13.1.6",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.4",
-    "typescript": "^4.9.5"
   }
 }
