Implement context and server online

--- a/packages/nextjs/.env
+++ b/packages/nextjs/.env
@@ -1,5 +1,5 @@
-REACT_APP_VERIFICATION_SERVER_PUBLIC_URL="https://562a-201-184-127-58.ngrok-free.app"
+REACT_APP_VERIFICATION_SERVER_PUBLIC_URL="https://daovationserver.onrender.com/"
 # Update with the project id created at https://cloud.walletconnect.com/
-REACT_APP_WALLET_CONNECT_ID="c2cb5bebd9aedccebb4055d516aa63e2"
+REACT_APP_WALLET_CONNECT_ID="c2cb5bebd9aedccebb4055d516aa63e21f1ff1d2h"
 
 REACT_APP_VERIFICATION_SERVER_LOCAL_HOST_URL="http://localhost:8080"
