--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -13,6 +13,7 @@
     "vercel": "vercel"
   },
   "dependencies": {
+    "@adraffy/ens-normalize": "^1.10.0",
     "@chakra-ui/next-js": "^2.1.5",
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
@@ -22,6 +23,7 @@
     "@rainbow-me/rainbowkit": "1.0.8",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
+    "@wagmi/core": "^1.4.5",
     "daisyui": "^3.5.1",
     "framer-motion": "^10.16.4",
     "kubo-rpc-client": "^3.0.1",
@@ -34,6 +36,8 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
+    "react-form-stepper": "^2.0.3",
+    "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.0",
     "react-json-view": "^1.21.3",
     "socket.io-client": "^4.7.2",
