--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -23,7 +23,6 @@
     "@rainbow-me/rainbowkit": "1.0.8",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
-    "@wagmi/core": "^1.4.5",
     "daisyui": "^3.5.1",
     "framer-motion": "^10.16.4",
     "kubo-rpc-client": "^3.0.1",
@@ -43,6 +42,7 @@
     "socket.io-client": "^4.7.2",
     "use-debounce": "^8.0.4",
     "usehooks-ts": "^2.7.2",
+    "uuid": "^9.0.1",
     "viem": "1.2.1",
     "wagmi": "1.3.10",
     "zustand": "^4.1.2"
@@ -53,6 +53,7 @@
     "@types/react": "^18.0.9",
     "@types/react-blockies": "^1.4.1",
     "@types/react-copy-to-clipboard": "^5.0.4",
+    "@types/uuid": "^9",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "autoprefixer": "^10.4.12",
     "eslint": "^8.15.0",
