--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
 	},
 	"packageManager": "yarn@3.2.3",
 	"devDependencies": {
+		"@types/next": "^9.0.0",
+		"@types/react": "^18.0.9",
+		"@types/react-dom": "^18",
 		"husky": "^8.0.1",
 		"lint-staged": "^13.0.3"
 	},
@@ -37,6 +40,10 @@
 		"usehooks-ts@^2.7.2": "patch:usehooks-ts@npm:^2.7.2#./.yarn/patches/usehooks-ts-npm-2.7.2-fceffe0e43.patch"
 	},
 	"dependencies": {
-		"@chakra-ui/react": "^2.8.1"
+		"@chakra-ui/react": "^2.8.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-form-stepper": "^2.0.3",
+		"react-hook-form": "^7.47.0"
 	}
 }
