--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -20,9 +20,14 @@
     "@emotion/styled": "^11.11.0",
     "@ethersproject/providers": "^5.7.2",
     "@heroicons/react": "^2.0.11",
+    "@matterlabs/hardhat-zksync-verify": "^0.2.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.2",
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@rainbow-me/rainbowkit": "1.0.8",
+    "@types/chai": "^4.3.9",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
+    "csstype": "^3.1.2",
     "daisyui": "^3.5.1",
     "framer-motion": "^10.16.4",
     "kubo-rpc-client": "^3.0.1",
@@ -48,7 +53,8 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
-    "@types/node": "^17.0.35",
+    "@types/next": "^9.0.0",
+    "@types/node": "^20.8.7",
     "@types/react": "^18.0.9",
     "@types/react-blockies": "^1.4.1",
     "@types/react-copy-to-clipboard": "^5.0.4",
@@ -62,7 +68,7 @@
     "postcss": "^8.4.16",
     "prettier": "^2.8.4",
     "tailwindcss": "^3.3.3",
-    "typescript": "^4.9.5",
+    "typescript": "^5.0.4",
     "vercel": "^28.15.1"
   }
 }
