--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -16,20 +16,20 @@
     "@adraffy/ens-normalize": "^1.10.0",
     "@chakra-ui/next-js": "^2.1.5",
     "@chakra-ui/react": "^2.8.1",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "latest",
+    "@emotion/styled": "latest",
     "@ethersproject/providers": "^5.7.2",
     "@heroicons/react": "^2.0.11",
-    "@matterlabs/hardhat-zksync-verify": "^0.2.0",
-    "@nomicfoundation/hardhat-chai-matchers": "^2.0.2",
-    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@matterlabs/hardhat-zksync-verify": "latest",
+    "@nomicfoundation/hardhat-chai-matchers": "latest",
+    "@nomicfoundation/hardhat-toolbox": "latest",
     "@rainbow-me/rainbowkit": "1.0.8",
-    "@types/chai": "^4.3.9",
+    "@types/chai": "latest",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
-    "csstype": "^3.1.2",
+    "csstype": "latest",
     "daisyui": "^3.5.1",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "latest",
     "kubo-rpc-client": "^3.0.1",
     "next": "^13.1.6",
     "next-qrcode": "^2.5.1",
@@ -47,14 +47,14 @@
     "use-debounce": "^8.0.4",
     "usehooks-ts": "^2.7.2",
     "uuid": "^9.0.1",
-    "viem": "1.2.1",
-    "wagmi": "1.3.10",
+    "viem": "latest",
+    "wagmi": "latest",
     "zustand": "^4.1.2"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
-    "@types/next": "^9.0.0",
-    "@types/node": "^20.8.7",
+    "@types/next": "latest",
+    "@types/node": "latest",
     "@types/react": "^18.0.9",
     "@types/react-blockies": "^1.4.1",
     "@types/react-copy-to-clipboard": "^5.0.4",
